[gd_scene load_steps=3 format=3 uid="uid://ddshk21xkkkl6"]

[ext_resource type="Script" path="res://Combat/CombatDisplay.gd" id="1_vpksb"]
[ext_resource type="Texture2D" uid="uid://csrvrhbp42i35" path="res://Assets/common/delete.png" id="2_nu07w"]

[node name="CombatDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpksb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.019
anchor_right = 1.0
anchor_bottom = 0.395
offset_top = -0.312001
offset_bottom = 0.0399933

[node name="EnnemiesContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 10

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.568
anchor_right = 1.0
anchor_bottom = 0.997
offset_left = -2.0
offset_top = -0.0640259
offset_bottom = -0.0560303

[node name="AlliesContainer" type="GridContainer" parent="MarginContainer2"]
layout_mode = 2
columns = 10

[node name="DeleteCombat" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.922
anchor_top = 0.395
anchor_right = 1.0
anchor_bottom = 0.546
offset_left = -0.144043
offset_top = 0.0399933
offset_right = 4.0
offset_bottom = 0.191986
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("2_nu07w")
ignore_texture_size = true
stretch_mode = 4

[node name="LocationName" type="Label" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = 302.0
offset_right = 655.0
offset_bottom = 325.0
text = "Location Name"

[connection signal="pressed" from="DeleteCombat" to="." method="_on_delete_combat_pressed"]
